--- a/Materia/agregarMateria.html
+++ b/Materia/agregarMateria.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">  
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">  
 
 </head>
   <body>
@@ -19,7 +19,7 @@
     <a class="navbar-brand text-white" href="#">Tutorias</a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item ">
-          <a id="materias" class="nav-link" style="font-size:19px; color:rgba(255, 255, 255, 0.644);"  href="#">Materias</a>
+          <a id="materias" class="nav-link" style="font-size:19px; color:rgba(255, 255, 255, 0.644);"  href="../Materia/index.html">Materias</a>
         </li>
       </ul>
       <span class="navbar-text dropdown">
