Se agrego la vista docente/index

--- a/Materia/editarMateria.html
+++ b/Materia/editarMateria.html
@@ -30,7 +30,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="#">Mis materias</a>
               <hr class="dropdown-divider">
-              <a class="dropdown-item" href="#">Cuenta</a>
+              <a class="dropdown-item" href="../Docente/index.html">Cuenta</a>
               <a class="dropdown-item" href="#">Cerrar sesión</a>
               
             </div>
