Se corrigieron errores

--- a/Docente/agDocente.html
+++ b/Docente/agDocente.html
@@ -44,11 +44,11 @@
 <div class="formAgDoc bg-light align-lg-center mt-2 mx-auto mb-2">  
     <div class="containerDatosPersonales">
          <h3 id="eDatosPersonales ">Datos personales</h3> 
-        </div>
+      </div>
  
  <div class="container my-2 bg-light">
-        <form class="">
-            <div class="input-group mb-3 ">
+        <form class="bg-light">
+            <div class="input-group mb-3 w-100">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1">Numero de Control</span>
         </div>
@@ -62,7 +62,7 @@
       </div>
       <div class="input-group mb-3 w-100">
         <div class="input-group-prepend">
-          <span class="input-group-text" id="basic-addon1">Apelido Paterno</span>
+          <span class="input-group-text" id="basic-addon1">Apellido Paterno</span>
         </div>
         <input type="text" name="txtApPaterno" id="txtApPaterno" class="form-control" aria-describedby="basic-addon1">
       </div>
@@ -166,7 +166,7 @@
       </div>
    </div>
     <button class="btn btn-secondary btn-md float-right" type="submit">Agregar</button> 
-
+    </form>
 </div>
    
 
