--- a/Alumno/agAlumno.html
+++ b/Alumno/agAlumno.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Docente | Agregar</title>
+    <title>Alumno | Agregar</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -40,8 +40,8 @@
 </div>
       </header>
 
-      <!--#######################   Formulario para Agregar Docentes  #######################-->
-<div class="formAgDoc bg-light align-lg-center mt-2 mx-auto mb-2">  
+      <!--#######################   Formulario para Agregar Alumnos  #######################-->
+<div class="formAgAlum bg-light align-lg-center mt-2 mx-auto mb-2">  
     <div class="containerDatosPersonales">
          <h3 id="eDatosPersonales ">Datos personales</h3> 
         </div>
@@ -76,7 +76,37 @@
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1">Semestre</span>
         </div>
-        <input type="email" name="txtEmail" id="txtEmail" class="form-control" aria-describedby="basic-addon1">
+        <select class="form-control" aria-label="Default select example">
+          <option selected>Selecciona una semestre</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="10">10</option>
+          <option value="11">11</option>
+          <option value="12">12</option>
+  </select>
+      </div>
+
+      <div class="input-group mb-3 w-100">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1">Carrera</span>
+        </div>
+        <select class="form-control" aria-label="Default select example">
+          <option selected>Seleccione una carrera</option>
+          <option >Ing. Sistemas Computacionales</option>
+          <option >Ing. Administración</option>
+          <option >Ing. Industrial</option>
+          <option >Ing. Mecatronica</option>
+          <option >Ing. Electromecanica</option>
+          <option >Ing. Petrolera</option>
+         
+  </select>
       </div>
       <div class="input-group mb-3 w-100">
         <div class="input-group-prepend">
@@ -91,8 +121,12 @@
         </div>
         <input type="password" name="txtContraseña" id="txtContraseña" class="form-control" aria-describedby="basic-addon1">
       </div>
-   <div class="bg-light mb-4" style="overflow: scroll; height:200px;">
-    <div class="form-check">
+
+      <!--Scroll Materias-->
+      <h6 id="enRead">Seleccione las materias que cursa:</h6>
+   <div class="bg-light mb-4 scrollMat " style="overflow-y:auto; overflow-x:hidden; height:200px; border: solid 1px rgba(0, 0, 0, 0.24); border-radius: 5px;">
+    <div class="container">
+      <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
         <label class="form-check-label" for="defaultCheck1">
          Administración
@@ -170,8 +204,11 @@
        IoT
         </label>
       </div>
+    </div>
+    
+
    </div>
-    <button class="btn btn-secondary btn-md float-right" type="submit">Agregar</button> 
+    <button class="btn btn-secondary btn-md float-right" type="submit">Guardar</button> 
 
 </div>
    
