Se agrego el campo para la validacion

--- a/Docente/agDocente.html
+++ b/Docente/agDocente.html
@@ -41,8 +41,14 @@
       </header>
 
       <!--#######################   Formulario para Agregar Docentes  #######################-->
-<div class="formAgDoc bg-light align-lg-center mt-2 mx-auto mb-2">  
-    <div class="containerDatosPersonales">
+<div class="formAgDoc bg-light align-lg-center mt-2 mx-auto mb-3">  
+  <div class="alert alert-danger alert-dismissible fade show"" role="alert">
+    You should check in on some of those fields below.
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>  
+  <div class="containerDatosPersonales">
          <h3 id="eDatosPersonales ">Datos personales</h3> 
       </div>
  
@@ -169,7 +175,7 @@
   </div>
   
   </div>
-  <button class="btn btn-secondary btn-md float-right" type="submit">Guardar</button> 
+  <button class="btn btn-secondary btn-md float-right mb-3" type="submit">Guardar</button> 
    </div>
     
     </form>
