--- a/Docente/index.html
+++ b/Docente/index.html
@@ -48,8 +48,14 @@
       </header>
 
       <!--#######################   Formulario Docentes  #######################-->
-<div class="formReadDoc bg-light align-lg-center mt-2 mx-auto mb-2">  
-    <div class="containerDatosPersonales">
+<div class="formReadDoc bg-light align-lg-center mt-2 mx-auto mb-3">  
+  <div class="alert alert-danger alert-dismissible fade show"" role="alert">
+    You should check in on some of those fields below.
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>   
+  <div class="containerDatosPersonales">
          <h3 id="eDatosPersonales ">Datos personales</h3>
          <div class="btn-group">
           <button type="button" href="#" class="btn btn-light">
@@ -208,7 +214,7 @@
      
    </div>
 
-    <button class="btn btn-secondary btn-md float-right" id="btnGuardar" name="btnGuardar" type="submit">Guardar</button> 
+    <button class="btn btn-secondary btn-md float-right | mb-3" id="btnGuardar" name="btnGuardar" type="submit">Guardar</button> 
         </form>
 </div>
    
