--- a/Materia/editarMateria.html
+++ b/Materia/editarMateria.html
@@ -48,8 +48,14 @@
 
       <!--#######################   Formulario para Editar Materias   #######################-->
 <div class="formEdMat bg-light align-lg-center mt-2 mx-auto">
+  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+    You should check in on some of those fields below.
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
   <div class="container">
-    <form class="">
+    <form class="w-75">
       <div class="input-group mb-3 w-75">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1">Clave</span>
